Fix sidebar vertical scrollbar

--- a/doc/_static/style.css
+++ b/doc/_static/style.css
@@ -353,3 +353,9 @@ div.sphx-glr-animation video {
     max-width: 100%;
     height: auto;
 }
+
+/* fix sidebar vertical scrollbar */
+.sidebar-primary-items__end {
+    margin-bottom: 0 !important;
+    margin-top: 0 !important;
+}
